[gd_scene load_steps=92 format=2]

[ext_resource path="res://Characters/Boss 1/idle/Boss1_idle_3.png" type="Texture" id=1]
[ext_resource path="res://Characters/Boss 1/idle/Boss1_idle_4.png" type="Texture" id=2]
[ext_resource path="res://Characters/Boss 1/idle/Boss1_idle_5.png" type="Texture" id=3]
[ext_resource path="res://Characters/Boss 1/idle/Boss1_idle_6.png" type="Texture" id=4]
[ext_resource path="res://Characters/Boss 1/idle/Boss1_idle_2.png" type="Texture" id=5]
[ext_resource path="res://Characters/Boss 1/idle/Boss1_idle_1.png" type="Texture" id=6]
[ext_resource path="res://Characters/Boss 1/run/Boss1_run_2.png" type="Texture" id=7]
[ext_resource path="res://Characters/Boss 1/run/Boss1_run_6.png" type="Texture" id=8]
[ext_resource path="res://Characters/Boss 1/run/Boss1_run_1.png" type="Texture" id=9]
[ext_resource path="res://Characters/Boss 1/run/Boss1_run_3.png" type="Texture" id=10]
[ext_resource path="res://Characters/Boss 1/run/Boss1_run_5.png" type="Texture" id=11]
[ext_resource path="res://Characters/Boss 1/run/Boss1_run_4.png" type="Texture" id=12]
[ext_resource path="res://Characters/Boss 1/die/Boss1_die_2.png" type="Texture" id=13]
[ext_resource path="res://Characters/Boss 1/die/Boss1_die_4.png" type="Texture" id=14]
[ext_resource path="res://Characters/Boss 1/die/Boss1_die_3.png" type="Texture" id=15]
[ext_resource path="res://Characters/Boss 1/die/Boss1_die_6.png" type="Texture" id=16]
[ext_resource path="res://Characters/Boss 1/die/Boss1_die_7.png" type="Texture" id=17]
[ext_resource path="res://Characters/Boss 1/die/Boss1_die_8.png" type="Texture" id=18]
[ext_resource path="res://Characters/Boss 1/die/Boss1_die_9.png" type="Texture" id=19]
[ext_resource path="res://Characters/Boss 1/die/Boss1_die_1.png" type="Texture" id=20]
[ext_resource path="res://Characters/Boss 1/die/Boss1_die_5.png" type="Texture" id=21]
[ext_resource path="res://Characters/Boss 1/die/Boss1_die_18.png" type="Texture" id=22]
[ext_resource path="res://Characters/Boss 1/die/Boss1_die_22.png" type="Texture" id=23]
[ext_resource path="res://Characters/Boss 1/die/Boss1_die_11.png" type="Texture" id=24]
[ext_resource path="res://Characters/Boss 1/die/Boss1_die_23.png" type="Texture" id=25]
[ext_resource path="res://Characters/Boss 1/die/Boss1_die_19.png" type="Texture" id=26]
[ext_resource path="res://Characters/Boss 1/die/Boss1_die_20.png" type="Texture" id=27]
[ext_resource path="res://Characters/Boss 1/die/Boss1_die_10.png" type="Texture" id=28]
[ext_resource path="res://Characters/Boss 1/die/Boss1_die_17.png" type="Texture" id=29]
[ext_resource path="res://Characters/Boss 1/die/Boss1_die_14.png" type="Texture" id=30]
[ext_resource path="res://Characters/Boss 1/die/Boss1_die_12.png" type="Texture" id=31]
[ext_resource path="res://Characters/Boss 1/die/Boss1_die_13.png" type="Texture" id=32]
[ext_resource path="res://Characters/Boss 1/die/Boss1_die_16.png" type="Texture" id=33]
[ext_resource path="res://Characters/Boss 1/die/Boss1_die_21.png" type="Texture" id=34]
[ext_resource path="res://Characters/Boss 1/die/Boss1_die_15.png" type="Texture" id=35]
[ext_resource path="res://Characters/Boss 1/die/Boss1_die_24.png" type="Texture" id=36]
[ext_resource path="res://Characters/Boss 1/die/Boss1_die_25.png" type="Texture" id=37]
[ext_resource path="res://Characters/Boss 1/die/Boss1_die_27.png" type="Texture" id=38]
[ext_resource path="res://Characters/Boss 1/die/Boss1_die_26.png" type="Texture" id=39]
[ext_resource path="res://Characters/Boss 1/hit/Boss1_hit_4.png" type="Texture" id=40]
[ext_resource path="res://Characters/Boss 1/hit/Boss1_hit_3.png" type="Texture" id=41]
[ext_resource path="res://Characters/Boss 1/hit/Boss1_hit_5.png" type="Texture" id=42]
[ext_resource path="res://Characters/Boss 1/hit/Boss1_hit_1.png" type="Texture" id=43]
[ext_resource path="res://Characters/Boss 1/hit/Boss1_hit_7.png" type="Texture" id=44]
[ext_resource path="res://Characters/Boss 1/hit/Boss1_hit_6.png" type="Texture" id=45]
[ext_resource path="res://Characters/Boss 1/hit/Boss1_hit_2.png" type="Texture" id=46]
[ext_resource path="res://Characters/Boss 1/attack 1/Boss1_attack1_9.png" type="Texture" id=47]
[ext_resource path="res://Characters/Boss 1/attack 1/Boss1_attack1_10.png" type="Texture" id=48]
[ext_resource path="res://Characters/Boss 1/attack 1/Boss1_attack1_8.png" type="Texture" id=49]
[ext_resource path="res://Characters/Boss 1/attack 1/Boss1_attack1_2.png" type="Texture" id=50]
[ext_resource path="res://Characters/Boss 1/attack 1/Boss1_attack1_4.png" type="Texture" id=51]
[ext_resource path="res://Characters/Boss 1/attack 1/Boss1_attack1_3.png" type="Texture" id=52]
[ext_resource path="res://Characters/Boss 1/attack 1/Boss1_attack1_7.png" type="Texture" id=53]
[ext_resource path="res://Characters/Boss 1/attack 1/Boss1_attack1_5.png" type="Texture" id=54]
[ext_resource path="res://Characters/Boss 1/attack 1/Boss1_attack1_6.png" type="Texture" id=55]
[ext_resource path="res://Characters/Boss 1/attack 1/Boss1_attack1_1.png" type="Texture" id=56]
[ext_resource path="res://HurtHitbox/Hurtbox.tscn" type="PackedScene" id=57]
[ext_resource path="res://Enemies/Boss1.gd" type="Script" id=58]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=59]
[ext_resource path="res://PlayerDetectionZone.tscn" type="PackedScene" id=60]
[ext_resource path="res://HurtHitbox/Hitbox.tscn" type="PackedScene" id=61]
[ext_resource path="res://HurtHitbox/PlayerInRange.tscn" type="PackedScene" id=62]
[ext_resource path="res://Enemies/PlayerInAxeThrow.gd" type="Script" id=63]
[ext_resource path="res://Characters/Boss 1/attack 2/Boss1_attack2_6.png" type="Texture" id=64]
[ext_resource path="res://Characters/Boss 1/attack 2/Boss1_attack2_2.png" type="Texture" id=65]
[ext_resource path="res://Characters/Boss 1/attack 2/Boss1_attack2_12.png" type="Texture" id=66]
[ext_resource path="res://Characters/Boss 1/attack 2/Boss1_attack2_10.png" type="Texture" id=67]
[ext_resource path="res://Characters/Boss 1/attack 2/Boss1_attack2_5.png" type="Texture" id=68]
[ext_resource path="res://Characters/Boss 1/attack 2/Boss1_attack2_4.png" type="Texture" id=69]
[ext_resource path="res://Characters/Boss 1/attack 2/Boss1_attack2_9.png" type="Texture" id=70]
[ext_resource path="res://Characters/Boss 1/attack 2/Boss1_attack2_11.png" type="Texture" id=71]
[ext_resource path="res://Characters/Boss 1/attack 2/Boss1_attack2_8.png" type="Texture" id=72]
[ext_resource path="res://Characters/Boss 1/attack 2/Boss1_attack2_7.png" type="Texture" id=73]
[ext_resource path="res://Characters/Boss 1/attack 2/Boss1_attack2_3.png" type="Texture" id=74]
[ext_resource path="res://Characters/Boss 1/attack 2/Boss1_attack2_1.png" type="Texture" id=75]
[ext_resource path="res://Music and Sounds/swish_3.wav" type="AudioStream" id=76]
[ext_resource path="res://Music and Sounds/swish_4.wav" type="AudioStream" id=77]
[ext_resource path="res://Music and Sounds/monster-1.wav" type="AudioStream" id=78]
[ext_resource path="res://Music and Sounds/monster-5.wav" type="AudioStream" id=79]

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer:playback_speed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "attack"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 56 ), ExtResource( 50 ), ExtResource( 52 ), ExtResource( 51 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 53 ), ExtResource( 49 ), ExtResource( 47 ), ExtResource( 48 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -20 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationPlayer:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.5 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.7, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hitbox_enable"
}, {
"args": [  ],
"method": "hit_finished1"
} ]
}
tracks/5/type = "audio"
tracks/5/path = NodePath("AudioStreamPlayer")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"clips": [ {
"end_offset": 0.0726391,
"start_offset": 0.0,
"stream": ExtResource( 77 )
} ],
"times": PoolRealArray( 0.7 )
}

[sub_resource type="Animation" id=2]
resource_name = "axethrow"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 75 ), ExtResource( 65 ), ExtResource( 74 ), ExtResource( 69 ), ExtResource( 68 ), ExtResource( 64 ), ExtResource( 73 ), ExtResource( 72 ), ExtResource( 70 ), ExtResource( 67 ), ExtResource( 71 ), ExtResource( 66 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ThrowHitbox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -146.3, 23.7501 ), Vector2( -498.22, -5.81421 ), Vector2( -374.72, -167.581 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ThrowHitbox/CollisionShape2D:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -45.0, 45.0, 45.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ThrowHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -200, -60 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AnimationPlayer:playback_speed")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.6, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "throw_hitbox_enable"
}, {
"args": [  ],
"method": "throw_axe_finished"
} ]
}
tracks/7/type = "audio"
tracks/7/path = NodePath("AudioStreamPlayer")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"clips": [ {
"end_offset": 0.272108,
"start_offset": 0.0,
"stream": ExtResource( 76 )
} ],
"times": PoolRealArray( 0.6 )
}

[sub_resource type="Animation" id=3]
length = 2.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 20 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 21 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 28 ), ExtResource( 24 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 30 ), ExtResource( 35 ), ExtResource( 33 ), ExtResource( 29 ), ExtResource( 22 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 34 ), ExtResource( 23 ), ExtResource( 25 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 39 ), ExtResource( 38 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -60 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 78 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 43 ), ExtResource( 46 ), ExtResource( 41 ), ExtResource( 40 ), ExtResource( 42 ), ExtResource( 45 ), ExtResource( 44 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -20 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4.0 ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 79 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=5]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=6]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.5 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 131.718, 82.061 )

[sub_resource type="CircleShape2D" id=8]
radius = 1924.9

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 66.2403, 123.589 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 54.1007, 39.3011 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 238.925, 92.3895 )

[node name="Boss1" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
collision_layer = 16
collision_mask = 3
script = ExtResource( 58 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 38 )
offset = Vector2( 0, -20 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -59.9668, -34.8269, -56.3943, 90.2071, 88.645, 91.636, 57.2079, -29.8255, -18.527, -71.9798 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 12 )
anims/attack = SubResource( 1 )
anims/axethrow = SubResource( 2 )
anims/die = SubResource( 3 )
anims/hit = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/run = SubResource( 6 )

[node name="Hurtbox" parent="." instance=ExtResource( 57 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -11.376, 9.57983 )
shape = SubResource( 7 )

[node name="Stats" parent="." instance=ExtResource( 59 )]
max_health = 8

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 60 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 8 )

[node name="Hitbox" parent="." instance=ExtResource( 61 )]
collision_mask = 4
damage = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -106.856, -7.58161 )
shape = SubResource( 9 )
disabled = true

[node name="PlayerInRange" parent="." instance=ExtResource( 62 )]
position = Vector2( -53.1575, 1.71475 )

[node name="CollisionShape2D" parent="PlayerInRange" index="0"]
position = Vector2( -16.1292, -6.14933 )

[node name="ThrowHitbox" parent="." instance=ExtResource( 61 )]
collision_mask = 4

[node name="CollisionShape2D" parent="ThrowHitbox" index="0"]
position = Vector2( -374.72, -167.581 )
rotation = 0.785398
shape = SubResource( 10 )
disabled = true

[node name="PlayerInAxeThrow" type="Area2D" parent="."]
visible = false
collision_layer = 0
script = ExtResource( 63 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerInAxeThrow"]
position = Vector2( -298.577, -1.50419 )
shape = SubResource( 11 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 78 )
bus = "Sounds"

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="body_entered" from="PlayerInAxeThrow" to="PlayerInAxeThrow" method="_on_PlayerInAxeThrow_body_entered"]
[connection signal="body_exited" from="PlayerInAxeThrow" to="PlayerInAxeThrow" method="_on_PlayerInAxeThrow_body_exited"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="PlayerInRange"]
[editable path="ThrowHitbox"]
